--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,5 +4,9 @@ Metrics/LineLength:
 Style/Documentation:
   Enabled: false
 
-Metrics/MethodLength:
+Metrics/BlockLength:
   Max: 30
+
+Style/ClassVars:
+  Enabled: false
+
